2008-06-02  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* env.in:
	Rolled back to the previous one. Previous commit of this file was an error.

2008-06-02  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* env.in:
	* flumotion/admin/gtk/adminwindow.py (AdminWindow.__init__,
	  AdminWindow._wizardFinshed, AdminWindow._connectionOpened):
	  Fixes #927 by adding a self._configurationWizardIsRunning so 
	  it can be controlled whether a wizard windows has been opened
	  so that a new one does not need to be opened.

2008-05-30  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py: Add a proper doc-string
	and remove a couple of more underscores.

	* flumotion/component/consumers/httpstreamer/admin_gtk.py
	(StatisticsAdminGtkNode._updateLabels): link can still be None,
	really protect against it.

	* flumotion/admin/gtk/adminwindow.py:
	call activateComponent with None if no component is selected, this
	allows you to deselect all to get back to the planet view

	* flumotion/admin/gtk/componentlist.py
	(ComponentList._selectionChanged): emit an empty list instead of None

	* flumotion/admin/gtk/componentview.py (PlanetPlaceholder.getWidget):
	Add a simple placeholder for planets, nothing to see yet, just improving
	the infrastructure in preparation for #986

	* flumotion/twisted/flavors.py (StateRemoteCache.addListener): Improve
	error message when an instance is already listening to remote cache

	* flumotion/admin/gtk/componentview.py:
	Avoid using timestamps, create an abstract base class
	for different kind of widgets called placeholder.
	Rename some variables to make even more sense.

	* flumotion/ui/wizard.py (SectionWizard.__init__): Remove last
	traces of getFirstStep.

	* flumotion/admin/gtk/adminwindow.py
	(AdminWindow._connectionOpened): update componentview callsite

	* flumotion/admin/gtk/componentview.py:
	CamelCasifying, fix imports, document, rename  methods and variables
	to make more sense
